// DBML Schema for Butterfly Eduwisata CMS
// Compatible with dbdiagram.io

Table accounts {
  id int [pk, increment]
  email varchar [unique, not null]
  password_hash varchar [not null]
  name varchar [not null]
  role varchar [not null, default: 'editor'] // super_admin, admin, editor
  is_active boolean [not null, default: true]
  last_login timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table species {
  id int [pk, increment]
  common_name varchar [not null]
  scientific_name varchar [not null]
  family varchar [not null]
  order varchar [not null, default: 'Lepidoptera']
  description text
  characteristics text
  wingspan varchar
  dominant_colors text [not null, note: 'JSON array']
  host_plants text [not null, note: 'JSON array']
  pollinated_plants text [not null, note: 'JSON array']
  ecosystem_role text
  ecology_notes text
  iucn_status varchar
  site_status varchar
  active_months text [not null, note: 'JSON array']
  found_locations text [not null, note: 'JSON array']
  primary_photo_url text
  gallery_urls text [not null, note: 'JSON array']
  is_published boolean [not null, default: false]
  slug varchar
  featured_on_home boolean [not null, default: false]
  home_order int [not null, default: 0]
  discovered_at timestamp
  discovered_by varchar
  internal_notes text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table articles {
  id int [pk, increment]
  title varchar [not null]
  slug varchar [unique, not null]
  category varchar [not null]
  thumbnail_url text
  content text [not null]
  summary text
  tags text [not null, note: 'JSON array']
  author_id int [ref: > accounts.id]
  status varchar [not null, default: 'draft'] // draft, review, active, archived
  published_at timestamp
  scheduled_at timestamp
  meta_title text
  meta_description text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table static_pages {
  id int [pk, increment]
  title varchar [not null]
  slug varchar [unique, not null]
  content text [not null]
  nav_order int [not null, default: 0]
  is_active boolean [not null, default: true]
  meta_title text
  meta_description text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table settings {
  id int [pk, increment]
  key varchar [unique, not null]
  value text
  group varchar [not null, default: 'umum'] // umum, seo, kiosk, backup
  updated_at timestamp [not null, default: `now()`]
}

Table activity_logs {
  id int [pk, increment]
  user_id int [ref: > accounts.id, note: 'ON DELETE SET NULL']
  user_name varchar
  action varchar [not null] // CREATE_ARTICLE, DELETE_SPECIES, LOGIN, etc.
  entity varchar // article, species, user, media, settings
  entity_id int
  detail text
  ip_address varchar
  created_at timestamp [not null, default: `now()`]
}

Table media {
  id int [pk, increment]
  filename varchar [not null]
  original_name varchar [not null]
  url text [not null]
  mime_type varchar [not null]
  size_bytes int [not null]
  width int
  height int
  title text
  alt_text text
  photographer varchar
  category varchar [not null, default: 'Umum'] // Spesies, Kegiatan, Fasilitas Situs, Artefak, Umum
  tags text [not null, note: 'JSON array']
  used_in_articles text [not null, note: 'JSON array of article IDs']
  used_in_species text [not null, note: 'JSON array of species IDs']
  uploaded_by int [ref: > accounts.id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}
